Terminando primeira fase

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,11 @@
 body{
-    background-color: #FBFFFE;
+    background-color:black ;
 }
+
 h1{
     color: #0CCE6B;
+}
+
+.cor1{
+    background-color:#0CCE6B ;
 }
