--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,6 +20,26 @@ div#titulo h1{
     font-weight: 800;
 }
 
+.efeito:hover{
+    cursor: pointer;
+    transition-duration: 1s;
+    transform: scale(1.2, 1.2);
+}
+
+.space-1{
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.tamanho-letra{
+    font-size: 70px;
+}
+
+.space{
+    padding-left: 400px;
+    padding-right: 400px;
+}
+
 footer#rodape{
     margin-top: 50px;
     margin-bottom: 50px;
@@ -38,4 +58,11 @@ footer#rodape a{
 
 .cor1{
     background-color:#0CCE6B ;
+}
+
+.back-fund-input{
+    background-color: #0CCE6B;
+    font-weight: bold;
+    color: white;
+    width: 250px;
 }
